fixed hero area for better layout and added white background. Also fixed project section font, sizing, and spacing

--- a/stylesheets/_projects.scss
+++ b/stylesheets/_projects.scss
@@ -1,5 +1,5 @@
 #projectSection {
-    background: rgb(86, 129, 51);
+    background: rgb(95, 148, 51);
     color: white;
     display: inline-block;
 }
@@ -27,18 +27,22 @@
 
 .projectName {
     font-size: 45px;
+    letter-spacing: -4px;
+
 }
 
 .projectHeadline {
-    font-size: 70px;
+    font-size: 60px;
     line-height: 110%;
+    font-weight: 900;
 }
-
 
 .projectDescription {
     font-size: 20px;
     width: 70%;
     line-height: 110%;
+    font-weight: 900;
+
 }
 
 .headings {
@@ -46,11 +50,11 @@
 }
 
 .checkItOut {
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .projectSS {
-    height: 100%;
+    height: 90%;
     width: 100%;
     border-radius: 13px;
     box-shadow: rgba(0, 0, 0, 0.39) 0 40px 70px;
