--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -1,45 +1,28 @@
 @import 'reset';
 @import 'nav';
 @import 'projects';
+@import 'heroSection';
+
+// main.scss reserved for entire page styling and imports
 
 body {
-  font-family: sans-serif;
-}
+  // font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
 
+}
 
 .section {
   height: 100vh;
   width: 100%;
 }
 
-#heroArea {
-  background: rgb(25, 33, 82);
-}
-
-.mainHeading {
-  color: white;
-}
-
-#name {
-  font-size: 130px;
-  padding: 60px 0 0 80px;
-}
-
-#jobTitle {
-  font-size: 40px;
-  padding-left: 80px;
-  // padding-top: 10px;
-}
-
 .button {
   color: white;
   background: none;
-  font-size: 20px;
-  border: 1px solid white;
-  border-radius: 6%;
-  // margin: 30px 0 0 80px;
-  padding: 15px 15px;
-  // height: 30px; 
+  font-size: 16px;
+  border: 2px solid white;
+  border-radius: 5px;
+  padding: 13px 13px;
   display: block;
 }
 
@@ -53,18 +36,5 @@ body {
   cursor: pointer
 }
 
-#cardButton {
-  margin: 30px 0 0 80px;
-}
 
-#skillIconWrapper {
-  // border: 2px solid white;
-  margin: 20px 0 0 80px;
-  display: inline-block;
-  // background: rgba(255, 255, 255, 0.308);
-}
 
-.skillIcons {
-  height: 60px;
-  padding: 5px;
-}
